--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "moment": "^2.29.4",
+    "node-cron": "^3.0.2",
     "telegraf": "^4.12.2"
   }
 }
